plang/testing/logs/false-incorrect/89/program89.p.p
gU.


r9M (z) (I7QRs) (uO) rsoz0 :- (kzYB BXqa, coEHg vW (x (W629) HM poW), f (X) (Ux2w) a), (bILl ZFV N GC (wzJN); iYdl (P4) (v QgKW (suM (Z) G) VO) s96 exrHz), hPVt g (EF) (t (gz) oh4 (Sd)) e6wx, (eE7B (O3) (pOn k (xS VuKx5 (Vj) (yNsA) (Aa)) (peZRg (vX7BK (zZaX)) (H3YBa) (g) hGOU) (b9KVW)) (K)).


s8 (sKKyB) (G) :- x (MMPH) a2S rg TOVy.


dZIW5 (t0cjS QdhsE (Ql) (kUiTV) W) :- mMaR F9 (G0), ax8n (c8i (kPF HsX4n (VDR)) (QtD) l), (nKzR OTZaq); nYe J5khK; yz (W) bHqkc Xy (Pp84n); bnGE OVh, c DnY j5E B8B; vwPgc (Xo) (IUw0r), cuM9 I b (CZiIR) (N); (t (UeQKB) (k64lp) wK Nmw); gVlJ (ag2 w); etUSO gVqv (Ff) wnW G194F; (yEWgP g (x1aTv (p5vk kjf) (xWo) (U) (cO)) (pHKUM (c58W (iQ P (RL)) pdRP1 (XYp0u)) JN6rh (JXqY) E)).


giDI :- (erh; va p9; wTHc, dB), (n3a (zB9q3 P3 Gt) hzIA (jQTte (Vq) (u9F O2sJL) w Rs)), vplh4 CcSs (T) (AQi7); eUcq (Yfu) PxcA (jWauj AR8je), (ls U); ((oTCaq (Az26) ypH3g)), (yGMLc sl f0P (Mt2) (k RHJz7 useBf (iSV Ckk rUCR (nvWeh)))), wh3r l vcsII, uc0 wg (Ee) (aarIq (aARzX s17Te (Uh) d)); tG4Xy (Obirv) kxYV N NH.
bnLYz CPWmF eLzIq hqxv (HkL) :- bZ1 (Gqm) (y9) (lAnj6 fPq (YU)) (o fgAP (v0Zv eXOS (rED1 Hp5) rOd)).
jpzY st (BsiVd) YA5vQ (T) :- zgKX YtV UCSXt (xa1 (W3) (K) DkH).


uV (zFJFq (e9Ocu) H oW3O) (wS M rTCM s (yya3T q9Z y (yBe0 H9L VD (aKs (t04 (KL6v9) (EY) Zi (Ce9Zo)))) G)) LZK IOeFO.
q :- stplH.
iP2Bp.

b50u :- jXwsL.

fE (PerE) (A) :- pAF q.

clGPF I :- ((nP4ji q), u (MY5rv) (K90H)), woQ5; c76 (WCE) cSuk (MAs6); hP3ul, lp7 (dK) (wL (loVM LyM5B) (ERtc) (fMY r (Jf6hd)) DoZ) C Lj, zOI9p; vzxvp (NxR) ox6; (naLgw), aQB F (gB (kt (CTC1) c nh) (H9lN) (C2) (Et)).

? jR zHpQn; (zh (dOO (u7) (odfs AU2 (k (bmsec (Pfvo) i0B2g) r) EhUcV) (c X) ks) fo2j); jLKk (p (qvq P0 (x5Zt QgYsO (NnmfL) (G)) (Ui)) (VR) (c8g)) sdY bchB (oA RH3v); l1y j b Ty1O (CcJW), lKEOM (Ba) (utalQ (xzx5E ka MDt n (DhvZF))) V3ea f, ((ekC s)); q (W7) J6h.

